really export default row heights for xlsx fdo#55621

Change-Id: I81173507b30fc260043e6c57c123926a17424797